@startuml

class Inscripcion{
    - materias: List<Materia>
    - alumno: Alumno

    + aprobada() : boolean
}

class Materia{
    - nombre: String
    - correlativasNecesarias: List<Materia>

    + agregarCorrelativas(ArrayList<Materia> correlativas) : void
}

class Alumno{
    - materiasAprobadas: List<Materia>

    + puedeCursar(Materia materia) : boolean
    + aprobarMateria(ArrayList<Materia> materias) : void
}

Alumno --> " * " Materia
Inscripcion --> Alumno
Inscripcion --> " * " Materia

@enduml